--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-Oluwakemi Temitope <shininglite@gmail.com>
-Besthor Igbe <igbebestor7@gmail.com>
+Salah-Eddine Elhafidi
